@@ -56,6 +56,10 @@ Release ...
 * [nt]roff: In extension level 1, long string "\*[xxx]", register "\n[xxx]",
   and font "\f[xxx]" names are no longer recognized unless they are on a
   line beginning with the ".do" request.
+* [nt]roff: The "\n[.ps]" number register, which holds the current font
+  size in device units, has been added.
+* [nt]roff: The "\E" escape sequence has been fixed; it does not resolve
+  to a printable but to an effective escape character now.
 * [nt]roff: The "\)" escape sequence (like "\&" but transparent for
   sentence ending) has been added.
 * troff: The "\/" and "\," escape sequences have been added in very basic
